# hellocomputer

./: .gitignore  .woodpecker.yml  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt
notebooks/: README.md  fireworks_tools.ipynb  newtasks.ipynb  tasks.ipynb
src/hellocomputer/: __init__.py  analytics.py  auth.py  config.py  db.py  extraction.py  graph.py  main.py  models.py  nodes.py  prompts.py  sessions.py  state.py  tools.py  users.py
src/hellocomputer/db/: __init__.py  sessions.py  users.py
src/hellocomputer/prompts/: README.md  general.md  general_prompt.md  intent.md  sql_prompt.md  visualization.md
src/hellocomputer/routers/: analysis.py  auth.py  chat.py  files.py  health.py  sessions.py
src/hellocomputer/static/: about.html  index.html  login.html  script.js  style.css
src/hellocomputer/tools/: __init__.py  db.py  viz.py
test/: test_data.py  test_load.py  test_prompts.py  test_query.py  test_tools.py  test_user.py
test/data/: TestExcelHelloComputer.xlsx  ~$TestExcelHelloComputer.xlsx
test/output/: .gitignore
